Fix anchor link scroll position hidden by navbar; Fixes #9

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -57,3 +57,11 @@ p {
 .text-white {
     text-shadow: 0 0 5pt rgba(0, 0, 0, 0.5);
 }
+
+// Fix anchor links hidden by navbar
+:target::before {
+    content: "";
+    display: block;
+    height: 5rem;
+    margin: -5rem 0 0;
+  }
